force-app/main/default/objects/GenAI_Request__c/GenAI_Request__c.object-meta.xml
<CustomObject>
    <description>Stores GenAI cloud service requests submitted by business users.</description>
    <label>GenAI Request</label>
    <nameField>
        <displayFormat>GENAI-{0000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GenAI Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>