force-app/main/default/objects/GenAI_Request__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>GenAI Requests</relationshipLabel>
    <relationshipName>GenAI_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>