force-app/main/default/objects/GenAI_Request__c/fields/Estimated_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Cost__c</fullName>
    <label>Estimated Monthly Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>