force-app/main/default/objects/GenAI_Request__c/fields/Request_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner_Email__c</fullName>
    <label>Request Owner Email</label>
    <type>Email</type>
</CustomField>