force-app/main/default/objects/GenAI_Request__c/fields/Required_Deployment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Required_Deployment_Date_Time__c</fullName>
    <label>Required Deployment Date/Time</label>
    <type>DateTime</type>
</CustomField>