force-app/main/default/objects/GenAI_Request__c/fields/Risk_Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Count__c</fullName>
    <label>Risk Assessment Count</label>
    <summaryForeignKey>Risk_Assessment__c.GenAI_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>