force-app/main/default/objects/GenAI_Request__c/fields/Selected_Cloud_Model__c.field-meta.xml
<CustomField>
    <fullName>Selected_Cloud_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Cloud Model</label>
    <referenceTo>Cloud_Model__c</referenceTo>
    <relationshipLabel>GenAI Requests</relationshipLabel>
    <relationshipName>GenAI_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>