force-app/main/default/objects/GenAI_Request__c/fields/Use_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Type__c</fullName>
    <label>Use Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Customer Support</fullName><default>false</default><label>Customer Support</label></value>
            <value><fullName>Document Analysis</fullName><default>false</default><label>Document Analysis</label></value>
            <value><fullName>Code Generation</fullName><default>false</default><label>Code Generation</label></value>
            <value><fullName>Marketing</fullName><default>false</default><label>Marketing</label></value>
            <value><fullName>Other</fullName><default>true</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>