force-app/main/default/objects/GenAI_Request__c/validationRules/Approved_Needs_Assessment.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Needs_Assessment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Request_Status__c, &quot;Approved&quot;),
  Risk_Assessment_Count__c &lt; 1
)</errorConditionFormula>
    <errorMessage>A GenAI request cannot be approved without at least one completed risk assessment.</errorMessage>
</ValidationRule>