force-app/main/default/objects/GenAI_Request__c/validationRules/Approved_Needs_Model.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Needs_Model</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Request_Status__c, &quot;Approved&quot;),
  ISBLANK(Selected_Cloud_Model__c)
)</errorConditionFormula>
    <errorMessage>An approved GenAI request must have a selected cloud model.</errorMessage>
</ValidationRule>