force-app/main/default/objects/GenAI_Request__c/validationRules/Cost_Exceeds_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Exceeds_Budget</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Estimated_Monthly_Cost__c)),
  NOT(ISBLANK(Business_Unit__c)),
  Estimated_Monthly_Cost__c &gt; Business_Unit__r.Budget_Limit__c
)</errorConditionFormula>
    <errorMessage>Estimated monthly cost cannot exceed the business unit budget limit.</errorMessage>
</ValidationRule>