force-app/main/default/objects/GenAI_Request__c/validationRules/High_Sensitivity_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Sensitivity_Justification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Data_Sensitivity__c, &quot;High&quot;),
  ISBLANK(Business_Justification__c)
)</errorConditionFormula>
    <errorMessage>High sensitivity GenAI requests must include a business justification.</errorMessage>
</ValidationRule>