force-app/main/default/objects/GenAI_Request__c/listViews/Draft_GenAI_Requests.listView-meta.xml
<ListView>
    <fullName>Draft_GenAI_Requests</fullName>
    <columns>NAME</columns>
    <columns>Request_Status__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Selected_Cloud_Model__c</columns>
    <columns>Use_Case_Type__c</columns>
    <columns>Data_Sensitivity__c</columns>
    <columns>Estimated_Monthly_Cost__c</columns>
    <columns>Required_Deployment_Date_Time__c</columns>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Draft GenAI Requests</label>
</ListView>